[tool.poetry]
name = "tira-cavegenerator"
version = "0.1.0"
description = ""
authors = ["Maijjay <maija.ylitalo95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
